# Outil-formalites

./: .env  .env.example  .gitignore  .tauri-updater-key.backup  .tauri-updater-key.old  .tauri-updater-key.pub  .taurignore  6_Build Tauri app.txt  7_Sign and generate latest.json.txt  AJOUTS_VARIABLES_SARL.md  AMELIORATION_EXPORT_STATUTS.md  AUDIT_FORMULAIRE_SARL.md  AUTHENTIFICATION.md  AUTOUPDATE_GUIDE.md  AUTOUPDATE_SIMPLE.md  BUGFIX_AUTOUPDATE_WORKFLOW.md  BUGFIX_GU_CATEGORISATIONS_ACTIVITES.md  CONFIGURATION_IA.md  CONFIGURATION_RESOLUE.md  CORRECTIF_CATEGORISATION_ACTIVITE_GU.md  CORRECTIF_COMPATIBILITE_WORD.md  Catégorisation des activités 2025 avril.xlsx  DIAGNOSTIC_AUTOUPDATE_PROBLEMES.md  EXEMPLE_EXPORT.md  FEATURE_GU_CATEGORY_ACTIVITIES_API.md  GOOGLE_CLOUD_VISION_SETUP.md  GUICHET-UNIQUE-LIMITATIONS.md  GUIDE-DEBUG-TAURI-PRODUCTION.md  GUIDE-TEST-GU-EI.md  GUIDE_COMPLET_RELEASE.md  GUIDE_CONFIG_TAURI_GU.md  GUIDE_DEBUG_GU.md  GUIDE_MISE_A_JOUR.md  GUIDE_TEST_AUTOUPDATE.md  IMPLEMENTATION_UPDATER_COMPLET.md  MISE_A_JOUR_MANDAT_AUTO.md  MODIF A APPORTER.txt  Mandat CCI (Personne morale).docx  NOUVEAU_FORMAT_MANDAT_CCI.md  PANNEAU_DEBUG_AUTOUPDATE.md  (+49 more)
.claude/: settings.local.json
OLD MD FILES/: AJOUT_ARTICLE_24_SARL.md  ANALYSE_GERANCE_SARL_vs_EURL.md  AUDIT_COMPLET_SARL_ARTICLES.md  AUDIT_FINAL_SARL_COMPLET.md  BUGFIX_CHECKLIST_CATEGORIES.md  BUGFIX_GU_STRUCTURE_IDENTITE.md  CHANGELOG_UX_REDACTION.md  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+100 files in other folders)
